# EmotionStimuli

./: .gitignore  LICENSE  README.md  datatests.txt  requirements.txt  setup.cfg  setup.py
docs/: .readthedocs.yaml  404.html  conf.py  embb.rst  emotion.baseline.rst  emotion.config.rst  emotion.evaluation.rst  emotion.rst  emotion.trainer.rst  emotion.utils.rst  hmm.rst  index.rst  modules.rst  requirements.txt  setup.rst  srl.rst  using.rst
docs/source/: conf.py  index.rst
emotion/baseline/: models.py
emotion/dataset/: dataset.py
emotion/evaluation/: __init__.py  metrics.py
emotion/utils/: __init__.py  file_reader.py  simulate.py
src/emotion/: __init__.py  applications.py
src/emotion/baseline/: __init__.py  bilstm.py  (+4 more)
tests/: dataset_test.py  datasettest.py  evaluation.py  test.json  test_evaluation.py
tests/eca/: eca.py  eval_eca.json  eval_eca.txt
tests/elec_tweets/: doc_elec_exp.json  elec_tweets.py  eval_elec.json  eval_elec_cse.txt  eval_elec_cue.txt  eval_elec_exp.txt  eval_elec_tar.txt
tests/emo-stim/: emotion-stimulus.py  eval_emo_stim.json  eval_emo_stim.txt
tests/gne/: doc_gne_cse.json  eval_gne.json  eval_gne_cse.txt  eval_gne_cue.txt  eval_gne_exp.txt  eval_gne_tar.txt  gne.py
tests/reman/: doc_reman_exp.json  doc_reman_tar.json  eval_gne_cse.txt  eval_gne_cue.txt  eval_gne_cue_a.txt  eval_gne_cue_j.txt  eval_gne_cue_o.txt  eval_gne_cue_s.txt  eval_gne_exp.txt  eval_reman.json  eval_reman_cse.txt  eval_reman_cue_a.txt  eval_reman_cue_j.txt  eval_reman_cue_o.txt  eval_reman_cue_s.txt  eval_reman_exp.txt  eval_reman_tar.txt  reman.py
(+25 files in other folders)
