[metadata]
# thanatoz-1, max-milian
name = EmotionStimuli
version = 0.0.1
author = Tushar D, Maximillian W.
author_email = st176870@stud.uni-stuttgart.de
description = Emotion role labelling project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Thanatoz-1/EmotionStimuli
project_urls =
    Bug Tracker = https://github.com/Thanatoz-1/EmotionStimuli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = emotion
packages = find:
python_requires = >=3.6

[options.packages.find]
where = emotion